--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   />
 
   <!-- Favicon (we'll add the file soon) -->
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="icon" href="favicon.png" type="image/png" />
 
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
