--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     content="Portfolio of Lucky Aigbefoh, project manager and aspiring web developer. Explore my projects, skills, and experience."
   />
 
-  <!-- Favicon (we'll add the file soon) -->
+  <!-- Favicon -->
   <link rel="icon" href="favicon.png" type="image/png" />
 
   <!-- Google Font -->
@@ -53,14 +53,18 @@
 
   <main>
     <div class="container">
+
+      <!-- ABOUT ME -->
       <section id="about" class="card section-animate">
         <h2>About Me</h2>
         <p>
-          I work as a project manager during the day and I'm learning web development. I enjoy planning, organising,
-          and making sure things get done on time and to a high standard.
+          I work as a project manager during the day and I'm learning web development. 
+          I enjoy planning, organising, and making sure things get done on time and to a high standard.
+          I'm based in London, UK and open to remote opportunities as I continue growing my skills.
         </p>
       </section>
 
+      <!-- SKILLS -->
       <section id="skills" class="card section-animate">
         <h2>Skills</h2>
         <div class="skills-grid">
@@ -93,9 +97,11 @@
         </div>
       </section>
 
+      <!-- PROJECTS -->
       <section id="projects" class="card section-animate">
         <h2>Projects</h2>
         <div class="projects-grid">
+
           <article class="project-card">
             <h3>Project Management Services</h3>
             <p>
@@ -119,22 +125,27 @@
             </p>
             <a href="web-portfolio.html" class="project-link">View details</a>
           </article>
+
         </div>
       </section>
 
+      <!-- EXPERIENCE -->
       <section id="experience" class="card section-animate">
         <h2>Experience</h2>
         <div class="timeline">
+
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content">
               <h3>Project Manager</h3>
-              <p class="timeline-date">Year – Present</p>
+              <p class="timeline-date">2018 – Present</p>
               <p>
-                Managing projects, coordinating teams, and ensuring delivery within scope, budget, and timelines.
+                Managing projects, coordinating teams, and ensuring delivery within scope, 
+                budget, and timelines for clients and stakeholders.
               </p>
             </div>
           </div>
+
           <div class="timeline-item">
             <div class="timeline-dot"></div>
             <div class="timeline-content">
@@ -145,9 +156,11 @@
               </p>
             </div>
           </div>
+
         </div>
       </section>
 
+      <!-- CONTACT -->
       <section id="contact" class="card section-animate">
         <h2>Contact</h2>
         <p>
@@ -158,6 +171,7 @@
           <a href="mailto:l.aigbefoh@gmail.com">l.aigbefoh@gmail.com</a>
         </p>
       </section>
+
     </div>
   </main>
 
