--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   />
 
   <!-- Favicon -->
-  <link rel="icon" href="favicon.png" type="image/png" />
+  <link rel="icon" href="favicon.png?v=2" type="image/png" />
 
   <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
