--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
     <!-- Hero section -->
     <div class="container hero">
       <div class="hero-text">
-        <p class="tagline">Project Manager • Aspiring Web Developer</p>
-        <h1>Turning ideas into organised, real-world projects.</h1>
+        <p class="tagline">Project Manager • Aspiring Web Developer • London, UK</p>
+        <h1>Helping teams deliver projects and learning to build for the web.</h1>
         <p class="hero-subtitle">
-          I manage projects by day and learn web development by night. This portfolio will grow as I do.
+			Since 2018 I've been managing projects and coordinating teams. Now I'm applying the same organised mindset to front-end
+			development, starting with simple, clean websites like this one.
         </p>
         <a href="#contact" class="btn-primary">Contact Me</a>
       </div>
@@ -62,9 +63,9 @@
       <section id="about" class="card section-animate">
         <h2>About Me</h2>
         <p>
-          I work as a project manager during the day and I'm learning web development. 
-          I enjoy planning, organising, and making sure things get done on time and to a high standard.
-          I'm based in London, UK and open to remote opportunities as I continue growing my skills.
+          I'm a project manager based in London, UK, with experience since 2018 helping teams deliver work on time and to a high standard.
+          I enjoy bringing structure to ideas, turning them into clear plans and actions.
+          Alongside this, I'm actively learning web development so I can better understand and support digital projects.
         </p>
       </section>
 
@@ -105,12 +106,12 @@
 	        <section id="services" class="card section-animate">
         <h2>Services</h2>
         <p>
-          I combine project management experience with growing web development skills 
-          to support individuals and small businesses.
+          I combine hands-on project management experience with growing web skills to support individuals and small businesses 
+		  who need help planning, organising, or starting simple online projects.
         </p>
         <div class="skills-grid">
           <div class="skill-group">
-            <h3>Project Support</h3>
+            <h3>Project Planning & Support</h3>
             <ul>
               <li>Planning and scheduling work</li>
               <li>Organising tasks and deadlines</li>
@@ -126,7 +127,7 @@
             </ul>
           </div>
           <div class="skill-group">
-            <h3>Web Support (Learning)</h3>
+            <h3>Web Support (In Training)</h3>
             <ul>
               <li>Simple websites like this portfolio</li>
               <li>Basic edits to existing sites</li>
@@ -144,7 +145,8 @@
           <article class="project-card">
             <h3>Project Management Services</h3>
             <p>
-              Supporting individuals and businesses to plan, organise, and deliver successful projects from start to finish.
+                Planning, organising, and coordinating small to medium projects for individuals and businesses, with a focus on clarity,
+				timelines, and communication.
             </p>
             <a href="project-management.html" class="project-link">View details</a>
           </article>
@@ -152,7 +154,7 @@
           <article class="project-card">
             <h3>Find Your Next Handyman</h3>
             <p>
-              Helping people connect with reliable handymen for repairs, maintenance, and small improvement jobs.
+              Concept for a simple platform that connects busy homeowners with reliable local handymen for repairs, maintenance, and small jobs.
             </p>
             <a href="handyman.html" class="project-link">View details</a>
           </article>
@@ -160,7 +162,7 @@
           <article class="project-card">
             <h3>Web Development Portfolio</h3>
             <p>
-              A growing collection of websites and web apps I build as I learn HTML, CSS, and JavaScript.
+              A growing collection of websites and practice projects I build as I learn HTML, CSS, and JavaScript, starting from this portfolio.
             </p>
             <a href="web-portfolio.html" class="project-link">View details</a>
           </article>
