--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			Since 2018 I've been managing projects and coordinating teams. Now I'm applying the same organised mindset to front-end
 			development, starting with simple, clean websites like this one.
         </p>
-        <a href="#contact" class="btn-primary">Contact Me</a>
+        <<a href="#contact" class="btn-primary" id="contact-cta">Contact Me</a>
       </div>
     </div>
   </header>
