--- a/handyman.html
+++ b/handyman.html
@@ -6,25 +6,31 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
   <main class="container" style="margin-top: 40px;">
-    <section class="card">
+    <section class="card section-animate">
       <h1>Find Your Next Handyman</h1>
+
       <p>
-        This project helps people connect with reliable handymen for repairs, maintenance, 
-        and small improvement jobs around their home or workspace.
+        This project aims to help people connect with reliable handymen for repairs,
+        maintenance, and small improvements around their home or workspace.
       </p>
 
-      <p>This page can be expanded with:</p>
+      <h2>Planned Features</h2>
       <ul>
-        <li>Categories of handy work (plumbing, minor repairs, furniture setup)</li>
-        <li>A directory or profile system for handymen</li>
-        <li>How matching or booking could work</li>
-        <li>Pricing, service levels, and response times</li>
+        <li>Categories of handy work (repairs, plumbing, furniture assembly, etc.)</li>
+        <li>A directory or profile list of available handymen</li>
+        <li>Booking or matching system based on location and availability</li>
+        <li>Pricing, service levels, and response time information</li>
       </ul>
 
-      <p><a href="index.html" class="project-link">← Back to portfolio</a></p>
+      <p>
+        <a href="index.html" class="project-link">← Back to portfolio</a>
+      </p>
     </section>
   </main>
+
+  <script src="script.js"></script>
 </body>
 </html>
