--- a/index.html
+++ b/index.html
@@ -4,54 +4,42 @@
   <meta charset="UTF-8" />
   <title>Lucky Aigbefoh | Project Manager & Aspiring Web Developer</title>
 
-  <!-- SEO + mobile friendly -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta
-    name="description"
-    content="Portfolio of Lucky Aigbefoh, project manager and aspiring web developer. Explore my projects, skills, and experience."
-  />
+  <meta name="description" content="Portfolio of Lucky Aigbefoh, project manager and aspiring web developer. Explore my projects, skills, and experience." />
 
-  <!-- Favicon -->
   <link rel="icon" href="favicon.png?v=2" type="image/png" />
 
-  <!-- Google Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap"
-    rel="stylesheet"
-  />
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet" />
 
-  <!-- CSS file -->
   <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
   <header>
-  <div class="container nav-bar">
-    <div class="logo">Lucky Aigbefoh</div>
-    <nav>
-      <a href="#about">About</a>
-      <a href="#skills">Skills</a>
-      <a href="#services">Services</a>
-      <a href="#projects">Projects</a>
-      <a href="#experience">Experience</a>
-      <a href="#contact">Contact</a>
-    </nav>
-    <button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode">
-      🌙
-    </button>
-  </div>
+    <div class="container nav-bar">
+      <div class="logo">Lucky Aigbefoh</div>
+      <nav>
+        <a href="#about">About</a>
+        <a href="#skills">Skills</a>
+        <a href="#services">Services</a>
+        <a href="#projects">Projects</a>
+        <a href="#experience">Experience</a>
+        <a href="#contact">Contact</a>
+      </nav>
+      <button class="theme-toggle" id="theme-toggle" aria-label="Toggle dark mode">🌙</button>
+    </div>
 
-    <!-- Hero section -->
     <div class="container hero">
       <div class="hero-text">
         <p class="tagline">Project Manager • Aspiring Web Developer • London, UK</p>
         <h1>Helping teams deliver projects and learning to build for the web.</h1>
         <p class="hero-subtitle">
-			Since 2018 I've been managing projects and coordinating teams. Now I'm applying the same organised mindset to front-end
-			development, starting with simple, clean websites like this one.
+          Since 2018 I've been managing projects and coordinating teams. Now I'm applying the same organised mindset to front-end
+          development, starting with simple, clean websites like this one.
         </p>
-        <<a href="#contact" class="btn-primary" id="contact-cta">Contact Me</a>
+        <a href="#contact" class="btn-primary" id="contact-cta">Contact Me</a>
       </div>
     </div>
   </header>
@@ -59,7 +47,6 @@
   <main>
     <div class="container">
 
-      <!-- ABOUT ME -->
       <section id="about" class="card section-animate">
         <h2>About Me</h2>
         <p>
@@ -69,7 +56,6 @@
         </p>
       </section>
 
-      <!-- SKILLS -->
       <section id="skills" class="card section-animate">
         <h2>Skills</h2>
         <div class="skills-grid">
@@ -82,6 +68,7 @@
               <li>Team coordination</li>
             </ul>
           </div>
+
           <div class="skill-group">
             <h3>Web Development (Learning)</h3>
             <ul>
@@ -91,6 +78,7 @@
               <li>Version control with Git & GitHub</li>
             </ul>
           </div>
+
           <div class="skill-group">
             <h3>Tools</h3>
             <ul>
@@ -101,13 +89,12 @@
           </div>
         </div>
       </section>
-	  
-	  <!-- SERVICES -->
-	        <section id="services" class="card section-animate">
+
+      <section id="services" class="card section-animate">
         <h2>Services</h2>
         <p>
           I combine hands-on project management experience with growing web skills to support individuals and small businesses 
-		  who need help planning, organising, or starting simple online projects.
+          who need help planning, organising, or starting simple online projects.
         </p>
         <div class="skills-grid">
           <div class="skill-group">
@@ -118,6 +105,7 @@
               <li>Tracking progress and risks</li>
             </ul>
           </div>
+
           <div class="skill-group">
             <h3>Process & Organisation</h3>
             <ul>
@@ -126,6 +114,7 @@
               <li>Improving how work is organised</li>
             </ul>
           </div>
+
           <div class="skill-group">
             <h3>Web Support (In Training)</h3>
             <ul>
@@ -136,8 +125,7 @@
           </div>
         </div>
       </section>
-	
-      <!-- PROJECTS -->
+
       <section id="projects" class="card section-animate">
         <h2>Projects</h2>
         <div class="projects-grid">
@@ -145,8 +133,8 @@
           <article class="project-card">
             <h3>Project Management Services</h3>
             <p>
-                Planning, organising, and coordinating small to medium projects for individuals and businesses, with a focus on clarity,
-				timelines, and communication.
+              Planning, organising, and coordinating small to medium projects for individuals and businesses, 
+              with a focus on clarity, timelines, and communication.
             </p>
             <a href="project-management.html" class="project-link">View details</a>
           </article>
@@ -154,7 +142,8 @@
           <article class="project-card">
             <h3>Find Your Next Handyman</h3>
             <p>
-              Concept for a simple platform that connects busy homeowners with reliable local handymen for repairs, maintenance, and small jobs.
+              Concept for a simple platform that connects busy homeowners with reliable local handymen for repairs, 
+              maintenance, and small jobs.
             </p>
             <a href="handyman.html" class="project-link">View details</a>
           </article>
@@ -162,7 +151,8 @@
           <article class="project-card">
             <h3>Web Development Portfolio</h3>
             <p>
-              A growing collection of websites and practice projects I build as I learn HTML, CSS, and JavaScript, starting from this portfolio.
+              A growing collection of websites and practice projects I build as I learn HTML, CSS, and JavaScript, 
+              starting from this portfolio.
             </p>
             <a href="web-portfolio.html" class="project-link">View details</a>
           </article>
@@ -170,7 +160,6 @@
         </div>
       </section>
 
-      <!-- EXPERIENCE -->
       <section id="experience" class="card section-animate">
         <h2>Experience</h2>
         <div class="timeline">
@@ -201,46 +190,8 @@
         </div>
       </section>
 
-      <!-- CONTACT -->
-            <section id="contact" class="card section-animate">
+      <section id="contact" class="card section-animate">
         <h2>Contact</h2>
-        <p>
-          If you'd like to work together or just say hello, feel free to reach out.
-        </p>
+        <p>If you'd like to work together or just say hello, feel free to reach out.</p>
 
-        <form
-          action="https://formspree.io/f/mwpyeprl"
-          method="POST"
-          class="contact-form"
-        >
-          <div class="form-row">
-            <label for="name">Name</label>
-            <input id="name" name="name" type="text" required />
-          </div>
-
-          <div class="form-row">
-            <label for="email">Email</label>
-            <input id="email" name="_replyto" type="email" required />
-          </div>
-
-          <div class="form-row">
-            <label for="message">Message</label>
-            <textarea id="message" name="message" rows="4" required></textarea>
-          </div>
-
-          <button type="submit" class="btn-primary">Send Message</button>
-        </form>
-
-      </section>
-
-    </div>
-  </main>
-
-  <footer>
-    <p>© 2025 Lucky Aigbefoh</p>
-  </footer>
-
-  <!-- JavaScript file -->
-  <script src="script.js"></script>
-</body>
-</html>
+        <form action="ht
