--- a/project - management.html
+++ b/project - management.html
@@ -6,24 +6,32 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
   <main class="container" style="margin-top: 40px;">
-    <section class="card">
+    <section class="card section-animate">
       <h1>Project Management Services</h1>
+
       <p>
-        I help individuals and businesses plan, organise, and deliver projects from start to finish.
+        I support individuals and businesses by planning, organising, and delivering projects from
+        start to finish. My focus is on structure, clarity, communication, and helping teams stay
+        on track.
       </p>
-      <p>
-        This page can be expanded with:
-      </p>
+
+      <h2>What This Page Will Include Soon</h2>
       <ul>
-        <li>Types of projects you support</li>
-        <li>Your process (discovery, planning, delivery)</li>
-        <li>Tools you use</li>
+        <li>Types of projects I typically support</li>
+        <li>My project process (planning → delivery → review)</li>
+        <li>Tools and methods I use</li>
+        <li>Case studies and examples</li>
       </ul>
-      <p><a href="index.html" class="project-link">← Back to portfolio</a></p>
+
+      <p>
+        <a href="index.html" class="project-link">← Back to portfolio</a>
+      </p>
     </section>
   </main>
+
+  <script src="script.js"></script>
 </body>
 </html>
-  
