--- a/web-portfolio.html
+++ b/web-portfolio.html
@@ -6,22 +6,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
   <main class="container" style="margin-top: 40px;">
-    <section class="card">
+    <section class="card section-animate">
       <h1>Web Development Portfolio</h1>
 
       <p>
-        This project showcases the websites and web applications I build as I learn HTML, CSS, JavaScript, and 
-        other web development tools. It documents my journey from beginner to confident developer.
+        This project showcases the websites and web applications I build as I learn HTML, CSS, 
+        JavaScript, and other tools. It documents my journey from beginner to confident developer.
       </p>
 
-      <p>This page can be expanded with:</p>
+      <h2>Planned Additions</h2>
       <ul>
         <li>Links to websites I build (hosted on GitHub Pages or Netlify)</li>
-        <li>Before/after screenshots and descriptions of improvements</li>
-        <li>HTML, CSS, and JavaScript features I’ve learned</li>
-        <li>Future goals such as learning frameworks or building full apps</li>
+        <li>Before/after screenshots with descriptions of improvements</li>
+        <li>Features learned in HTML, CSS, and JavaScript</li>
+        <li>Future goals such as frameworks or building full apps</li>
       </ul>
 
       <p>
@@ -29,5 +30,7 @@
       </p>
     </section>
   </main>
+
+  <script src="script.js"></script>
 </body>
 </html>
