--- a/handyman.html
+++ b/handyman.html
@@ -13,17 +13,39 @@
       <h1>Find Your Next Handyman</h1>
 
       <p>
-        This project aims to help people connect with reliable handymen for repairs,
-        maintenance, and small improvements around their home or workspace.
+        This concept project focuses on helping people quickly find reliable handymen for small jobs,
+        repairs, and maintenance around the home or workplace.
       </p>
+
+      <h2>The Problem</h2>
+      <p>
+        Many people do not know who to call for small tasks such as fixing a minor issue,
+        assembling furniture, or carrying out basic repairs. They often rely on word of mouth,
+        long online searches, or trial and error.
+      </p>
+
+      <h2>The Concept</h2>
+      <p>
+        The idea is to provide a simple, trusted place where people can:
+      </p>
+      <ul>
+        <li>Choose the type of job they need help with</li>
+        <li>Browse a small list of reliable handymen in their area</li>
+        <li>Send a quick request with basic details of the job</li>
+      </ul>
 
       <h2>Planned Features</h2>
       <ul>
-        <li>Categories of handy work (repairs, plumbing, furniture assembly, etc.)</li>
-        <li>A directory or profile list of available handymen</li>
-        <li>Booking or matching system based on location and availability</li>
-        <li>Pricing, service levels, and response time information</li>
+        <li>Categories for work such as repairs, maintenance, and furniture assembly</li>
+        <li>Short profiles for each handyman with location and services</li>
+        <li>A simple enquiry form to request contact or a quote</li>
+        <li>Potential for ratings or feedback in the future</li>
       </ul>
+
+      <p>
+        As my web development skills grow, this could become a small working demo for a
+        handyman-matching service.
+      </p>
 
       <p>
         <a href="index.html" class="project-link">← Back to portfolio</a>
