--- a/project - management.html
+++ b/project - management.html
@@ -13,21 +13,40 @@
       <h1>Project Management Services</h1>
 
       <p>
-        I support individuals and businesses by planning, organising, and delivering projects from
-        start to finish. My focus is on structure, clarity, communication, and helping teams stay
-        on track.
+        I help individuals and small businesses plan, organise, and deliver projects from start to finish.
+        My focus is on clarity, structure, and communication so everyone understands what needs to happen and when.
       </p>
 
-      <h2>What This Page Will Include Soon</h2>
+      <h2>Who I Work With</h2>
       <ul>
-        <li>Types of projects I typically support</li>
-        <li>My project process (planning → delivery → review)</li>
-        <li>Tools and methods I use</li>
-        <li>Case studies and examples</li>
+        <li>Individuals planning personal or home projects</li>
+        <li>Small businesses managing internal changes or improvements</li>
+        <li>Teams that need help coordinating tasks and timelines</li>
+      </ul>
+
+      <h2>How I Manage Projects</h2>
+      <ul>
+        <li><strong>Discovery:</strong> Understand goals, constraints, and expectations.</li>
+        <li><strong>Planning:</strong> Break work into tasks, define owners, and set realistic timelines.</li>
+        <li><strong>Delivery:</strong> Track progress, communicate updates, and manage risks or issues.</li>
+        <li><strong>Review:</strong> Capture what went well and what can be improved next time.</li>
+      </ul>
+
+      <h2>Tools and Approach</h2>
+      <ul>
+        <li>Simple plans and trackers using Excel or online tools</li>
+        <li>Clear summaries instead of complex documentation</li>
+        <li>Regular check-ins to keep everyone aligned</li>
       </ul>
 
       <p>
+        If you’d like to discuss a project or idea, you can contact me through the form on my main portfolio.
+      </p>
+
+      <p>
         <a href="index.html" class="project-link">← Back to portfolio</a>
+        &nbsp;|&nbsp;
+        <a href="index.html#contact" class="project-link">Go to contact</a>
       </p>
     </section>
   </main>
