--- a/web-portfolio.html
+++ b/web-portfolio.html
@@ -13,17 +13,34 @@
       <h1>Web Development Portfolio</h1>
 
       <p>
-        This project showcases the websites and web applications I build as I learn HTML, CSS, 
-        JavaScript, and other tools. It documents my journey from beginner to confident developer.
+        This page will showcase the websites and web applications I build as I learn HTML, CSS,
+        JavaScript, and other front-end tools. It will track my progress from beginner to more confident developer.
       </p>
 
-      <h2>Planned Additions</h2>
+      <h2>Current Focus</h2>
       <ul>
-        <li>Links to websites I build (hosted on GitHub Pages or Netlify)</li>
-        <li>Before/after screenshots with descriptions of improvements</li>
-        <li>Features learned in HTML, CSS, and JavaScript</li>
-        <li>Future goals such as frameworks or building full apps</li>
+        <li>Building clean, simple layouts with HTML and CSS</li>
+        <li>Improving responsive design for mobile and desktop</li>
+        <li>Practising JavaScript through small, focused projects</li>
       </ul>
+
+      <h2>Planned Projects</h2>
+      <ul>
+        <li>Multi-page personal and service websites</li>
+        <li>Small interactive features such as forms, toggles, and filters</li>
+        <li>Landing pages for project ideas like the Handyman Finder</li>
+      </ul>
+
+      <h2>Future Goals</h2>
+      <ul>
+        <li>Learn a front-end framework such as React</li>
+        <li>Connect front-end projects to simple APIs</li>
+        <li>Build more complete apps with real user flows</li>
+      </ul>
+
+      <p>
+        As I complete more projects, I will add links, screenshots, and descriptions here.
+      </p>
 
       <p>
         <a href="index.html" class="project-link">← Back to portfolio</a>
