--- a/index.html
+++ b/index.html
@@ -194,4 +194,33 @@
         <h2>Contact</h2>
         <p>If you'd like to work together or just say hello, feel free to reach out.</p>
 
-        <form action="ht
+        <form action="https://formspree.io/f/mwpyeprl" method="POST" class="contact-form">
+          <div class="form-row">
+            <label for="name">Name</label>
+            <input id="name" name="name" type="text" required />
+          </div>
+
+          <div class="form-row">
+            <label for="email">Email</label>
+            <input id="email" name="_replyto" type="email" required />
+          </div>
+
+          <div class="form-row">
+            <label for="message">Message</label>
+            <textarea id="message" name="message" rows="4" required></textarea>
+          </div>
+
+          <button type="submit" class="btn-primary">Send Message</button>
+        </form>
+      </section>
+
+    </div>
+  </main>
+
+  <footer>
+    <p>© 2025 Lucky Aigbefoh</p>
+  </footer>
+
+  <script src="script.js"></script>
+</body>
+</html>
