--- a/web-portfolio.html
+++ b/web-portfolio.html
@@ -4,6 +4,19 @@
   <meta charset="UTF-8" />
   <title>Web Development Portfolio | Lucky Aigbefoh</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta
+    name="description"
+    content="Web development portfolio for Lucky Aigbefoh, documenting practice projects and progress learning HTML, CSS, and JavaScript."
+  />
+  <link rel="icon" href="favicon.png?v=2" type="image/png" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap"
+    rel="stylesheet"
+  />
+
   <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -47,6 +60,10 @@
       </p>
     </section>
   </main>
+
+  <footer>
+    <p>© 2025 Lucky Aigbefoh</p>
+  </footer>
 
   <script src="script.js"></script>
 </body>
