--- a/handyman-landing.html
+++ b/handyman-landing.html
@@ -9,6 +9,14 @@
     content="Concept landing page for 'Find Your Next Handyman' – a simple way to connect busy people with reliable local handymen."
   />
   <link rel="icon" href="favicon.png" type="image/png" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap"
+    rel="stylesheet"
+  />
+
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
