--- a/handyman.html
+++ b/handyman.html
@@ -4,6 +4,19 @@
   <meta charset="UTF-8" />
   <title>Handyman Finder | Lucky Aigbefoh</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta
+    name="description"
+    content="Concept project by Lucky Aigbefoh exploring a simple way to connect people with reliable local handymen for small jobs and home maintenance."
+  />
+  <link rel="icon" href="favicon.png?v=2" type="image/png" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap"
+    rel="stylesheet"
+  />
+
   <link rel="stylesheet" href="styles.css" />
 </head>
 
@@ -52,6 +65,10 @@
       </p>
     </section>
   </main>
+
+  <footer>
+    <p>© 2025 Lucky Aigbefoh</p>
+  </footer>
 
   <script src="script.js"></script>
 </body>
