--- a/handyman.html
+++ b/handyman.html
@@ -61,8 +61,12 @@
       </p>
 
       <p>
-        <a href="index.html" class="project-link">← Back to portfolio</a>
+        <a href="handyman-landing.html" class="project-link">Visit the Handyman Landing Page →</a>
       </p>
+	  
+	  <p>
+		   <a href="index.html" class="project-link">← Back to portfolio</a>
+	  </p>
     </section>
   </main>
 
