--- a/handyman-landing.html
+++ b/handyman-landing.html
@@ -121,9 +121,8 @@
           <button type="submit" class="btn-primary">Send</button>
         </form>
 
-        <p style="margin-top: 10px; font-size: 0.9rem;">
-          Or email me directly at
-          <a href="mailto:l.aigbefoh@gmail.com">l.aigbefoh@gmail.com</a>
+        <p style="margin-top: 15px;">
+		  <a href="handyman.html" class="project-link">← View the Handyman Project Details</a>
         </p>
       </section>
     </div>
