--- a/handyman-landing.html
+++ b/handyman-landing.html
@@ -129,7 +129,9 @@
   </main>
 
   <footer>
+   <div class="container">
     <p>© 2025 Lucky Aigbefoh</p>
+   </div>
   </footer>
 
   <script src="script.js"></script>
